<resources>
    <string name="app_name">App Sistemas al día</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_cc">Identificación</string>
    <string name="prompt_Name">Nombre</string>
    <string name="prompt_LastName">Apellido</string>
    <string name="prompt_NamepLstname">Nombres y Apellidos</string>
    <string name="prompt_typeUser">Tipo de usuario</string>
    <string name="prompt_Admin">Administrador</string>
    <string name="prompt_Driver">Facturador</string>
    <string name="prompt_telefono1">Telefono 1</string>
    <string name="prompt_telefono2">Telefono 2</string>
    <string name="prompt_Address">Dirección</string>
    <string name="prompt_Email">Correo Electrónico</string>
    <string name="sing_up">"Registrarse"</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="titulo_registrar_usuario">Registrar usuario</string>
    <string name="titulo_registrar_cliente">Registrar cliente</string>

    <!-- URL's WebServices -->
    <string name="URL_RegisterUser">https://webservicetest-android.000webhostapp.com/WebServices/RegistroUsuarios.php</string>
    <string name="URL_Login">https://webservicetest-android.000webhostapp.com/WebServices/ws_login.php</string>
    <string name="URL_RegisterProduct">https://webservicetest-android.000webhostapp.com/WebServices/RegisterProduct.php</string>
    <string name="URL_RegisterClients">https://webservicetest-android.000webhostapp.com/WebServices/RegisterClient.php</string>
    <string name="URL_GetProduct">https://webservicetest-android.000webhostapp.com/WebServices/GetProducts.php</string>
    <string name="URL_GetInvoice">https://webservicetest-android.000webhostapp.com/WebServices/GetInvoice.php</string>
    <string name="URL_GetClients">https://webservicetest-android.000webhostapp.com/WebServices/GetClients.php</string>

    <string name="title_activity_register_client">RegisterClient</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
</resources>